cloud/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robyn-app-deployment
  labels:
    app: robyn-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robyn-app
  template:
    metadata:
      labels:
        app: robyn-app
    spec:
      containers:
      - name: robyn-web
        image: us-central1-docker.pkg.dev/f51-robyn-hackathon/robyn/robyn-web
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: robyn-volume
          mountPath: "/app/robyn-data"
      volumes:
      - name: robyn-volume
        persistentVolumeClaim:
          claimName: robyn-pvc
