cloud/k8s/service.yaml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
 # Service name
 name: robyn-app-deployment
spec:
 selector:
   # Selector for Pods
   app: robyn-app
 ports:
   # Port Map
 - port: 80
   targetPort: 3000
   protocol: TCP
 type: LoadBalancer
